# industrial-device-management-system

./: .gitignore  CMakeLists.txt  README.md
include/: Device.hpp  DeviceStatus.hpp  Robot.hpp
src/: Controller.cpp  Robot.cpp  Sensor.cpp
